env/dev/nsg_rules.tf
# NSG rules managed by Terraform (imported from existing rules created via az cli)

# Allow SSH (temporary wide open - lock down later)
resource "azurerm_network_security_rule" "allow_ssh_22" {
  name                       = "allow-ssh-22"
  priority                   = 100
  direction                  = "Inbound"
  access                     = "Allow"
  protocol                   = "Tcp"
  source_port_range          = "*"
  destination_port_range     = "22"
  source_address_prefix      = "*"
  destination_address_prefix = "*"

  resource_group_name         = azurerm_resource_group.rg.name
  network_security_group_name = azurerm_network_security_group.nsg.name
}

# Allow HTTP
resource "azurerm_network_security_rule" "allow_http_80" {
  name                       = "allow-http-80"
  priority                   = 110
  direction                  = "Inbound"
  access                     = "Allow"
  protocol                   = "Tcp"
  source_port_range          = "*"
  destination_port_range     = "80"
  source_address_prefix      = "*"
  destination_address_prefix = "*"

  resource_group_name         = azurerm_resource_group.rg.name
  network_security_group_name = azurerm_network_security_group.nsg.name
}
